Pass backend selection flags to distcheck

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,36 +29,42 @@ RTMIDIDUMMYSOURCES = \
 
 if HAVE_JACK
 RTMIDISOURCES += $(RTMIDIJACKSOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-jack
 else
 EXTRA_DIST += $(RTMIDIJACKSOURCES)
 endif
 
 if HAVE_ALSA
 RTMIDISOURCES += $(RTMIDIALSASOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-alsa
 else
 EXTRA_DIST += $(RTMIDIALSASOURCES)
 endif
 
 if HAVE_WINMM
 RTMIDISOURCES += $(RTMIDIWINMMSOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-winmm
 else
 EXTRA_DIST += $(RTMIDIWINMMSOURCES)
 endif
 
 if HAVE_WINKS
 RTMIDISOURCES += $(RTMIDIWINKSSOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-winks
 else
 EXTRA_DIST += $(RTMIDIWINKSSOURCES)
 endif
 
 if HAVE_COREMIDI
 RTMIDISOURCES += $(RTMIDIOSXSOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-coremidi
 else
 EXTRA_DIST += $(RTMIDIOSXSOURCES)
 endif
 
 if HAVE_DUMMY
 RTMIDISOURCES += $(RTMIDIDUMMYSOURCES)
+AM_DISTCHECK_CONFIGURE_FLAGS += --with-dummy
 else
 EXTRA_DIST += $(RTMIDIDUMMYSOURCES)
 endif
