--- a/tests/run-virt-cmidiio.in
+++ b/tests/run-virt-cmidiio.in
@@ -1,4 +1,5 @@
 #!/bin/bash
+# @configure_input@
 
 # return if we are configured without external loopback devices
 @HAVE_EXTERNAL_LOOPBACK_FALSE@exit 0
